chore: Build and run v3 with Java 17 (#3269)
* Upgrade gradle-git-properties plugin

Signed-off-by: Petr Weinfurt <petr.weinfurt@broadcom.com>

* Resolve reflection issues for tomcat-common tests.

Signed-off-by: Petr Weinfurt <petr.weinfurt@broadcom.com>

* Resolve reflection issues for discovery-service tests.

Signed-off-by: Petr Weinfurt <petr.weinfurt@broadcom.com>

* Api-layer built successfully with Java 17

Signed-off-by: Petr Weinfurt <petr.weinfurt@broadcom.com>

* Update the source and target compatibility to Java 17

Signed-off-by: Petr Weinfurt <petr.weinfurt@broadcom.com>

* move workflow to java17

Signed-off-by: at670475 <andrea.tabone@broadcom.com>

* fix unit test

Signed-off-by: at670475 <andrea.tabone@broadcom.com>

* add add-opens prop to all the tests gradle tasks

Signed-off-by: at670475 <andrea.tabone@broadcom.com>

* Fix test syntetic to invoke jacocoInit() method

Signed-off-by: Petr Weinfurt <petr.weinfurt@broadcom.com>

* fix WebSocketRoutedSessionTest test

Signed-off-by: at670475 <andrea.tabone@broadcom.com>

* fix unit test

Signed-off-by: at670475 <andrea.tabone@broadcom.com>

* fixed remaining tests

Signed-off-by: at670475 <andrea.tabone@broadcom.com>

* Add JVM args to npm run scripts

Signed-off-by: Petr Weinfurt <petr.weinfurt@broadcom.com>

* Add JVM args to start.sh scripts

Signed-off-by: Petr Weinfurt <petr.weinfurt@broadcom.com>

* Define jvmArgs differently for integration tests.

Signed-off-by: Petr Weinfurt <petr.weinfurt@broadcom.com>

* attempt

Signed-off-by: at670475 <andrea.tabone@broadcom.com>

* attempt

Signed-off-by: at670475 <andrea.tabone@broadcom.com>

* add missing props

Signed-off-by: at670475 <andrea.tabone@broadcom.com>

* attempt

Signed-off-by: at670475 <andrea.tabone@broadcom.com>

* Define jvmArgs for jib containers

Signed-off-by: Petr Weinfurt <petr.weinfurt@broadcom.com>

* Define jvmArgs for jib containers

Signed-of