@@ -114,11 +114,19 @@ allprojects {
 configure(subprojects.findAll {it.name != 'platform'}) {
     apply plugin: 'java-library'
 
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 
     test {
         useJUnitPlatform()
+        jvmArgs '--add-opens=java.base/java.nio.channels.spi=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.io=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.util=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/javax.net.ssl=ALL-UNNAMED'
     }
 
     dependencies {
